# chernobylite

./: CMakeLists.txt
include/chernobylite/: opencv_helpers.hpp
src/: chernobylite.cpp
